--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "https://YuDorosh.github.io/React-App",
   "name": "react-task-tracker",
   "version": "0.1.0",
   "private": true,
